<resources>
    <string name="app_name">追梦钱包</string>
    <string name="home">首页</string>
    <string name="loans">贷款</string>
    <string name="me">我的</string>
    <string name="find">发现</string>
    <string name="share">分享</string>
    <string name="product_icon">借款平台图标</string>
    <string name="please_login">HI，请登录~</string>
    <string name="apply_borrow_money">申请借款</string>
    <string name="my_track">我的足迹</string>
    <string name="my_feedback">我要反馈</string>
    <string name="about_us">关于我们</string>
    <string name="setting">设置</string>
    <string name="please_et_idcard">请输入身份证号</string>
    <string name="please_et_phone">请输入手机号码</string>
    <string name="idcard_str">身份证号码</string>
    <string name="name_str">真实姓名</string>
    <string name="please_et_name">请输入真实姓名</string>
    <string name="text_person_info_tip">有助于加快借款进度</string>
    <string name="copyright_tip">平台承诺保护客户信息安全</string>
    <string name="submit">提交</string>
    <string name="login_pw_set">登录密码设置</string>
    <string name="search_password">找回密码</string>
    <string name="please_input_old_pw">请输入旧密码</string>
    <string name="password_tip">请输入6~16位字符密码</string>
    <string name="retry_input_pw">请再次输入密码</string>
    <string name="change_password">修改密码</string>
    <string name="save_password">保存密码</string>
    <string name="click_back">点击找回</string>
    <string name="more">更多</string>
    <string name="info">信息</string>
    <string name="complete">完成</string>
    <string name="please_input_phone">请输入11位手机号</string>
    <string name="please_input_verify_code">请输入4位验证码</string>
    <string name="please_input_new_pw">请输入6~16位字符新密码</string>
    <string name="logout">退出登录</string>
    <string name="goto_apply_money"><![CDATA[资料已完善，去借钱 >]]></string>
    <string name="person_info">个人信息</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="click_with_find">点击找回</string>
    <string name="login">登录</string>
    <string name="login_by_pwd">密码登录</string>
    <string name="login_by_code">动态码登录</string>
    <string name="i_read">我已阅读</string>
    <string name="register_agreement">《追梦钱包注册协议》</string>
    <string name="no_more">没有更多了…</string>
    <string name="canot_find_suitable_product">没有找到合适的产品？点击这</string>
    <string name="quick_matching">快速匹配</string>
    <string name="profit_for_day">日利润</string>
    <string name="deadline">期限</string>
    <string name="loan_fastest">最快放款</string>
    <string name="apply_condition">申请条件</string>
    <string name="need_material">所需材料</string>
    <string name="product_introduce">产品介绍</string>
    <string name="extract_money">提钱花</string>
    <string name="submit_borrow">已提交借款</string>
    <string name="donot_apply_by_now">暂时不想申请</string>
    <string name="hope_money">期望金额</string>
    <string name="text_5000">5000</string>
    <string name="money">元</string>
    <string name="text_30">30</string>
    <string name="day">天</string>
    <string name="apply_period">借款周期</string>
    <string name="arrive_time">到帐时间</string>
    <string name="text_12">12</string>
    <string name="hour">小时</string>
    <string name="feed_back_question_type">反馈问题类型</string>
    <string name="apply_type">借款问题</string>
    <string name="experience_type">体验问题</string>
    <string name="other_type">其他</string>
    <string name="please_input_phone1">请输入手机号码</string>
    <string name="feed_back_question_tip">请选择问题类型，帮助我们更快的处理您的反馈</string>
    <string name="no_track">你还没留下任何足迹哦~</string>
    <string name="look">去看看</string>
    <string name="beadwallet">追梦钱包</string>
    <string name="me_center">个人中心</string>
    <string name="help_center">帮助中心</string>
    <string name="my_find">我的发现</string>
    <string name="credit_auth">信用认证</string>
    <string name="apply_borrow_record">申请记录</string>
    <string name="change_pwd">修改密码</string>
    <string name="go_evaluate">去评价</string>
    <string name="go_feedback">去反馈</string>
    <string name="mobile_str">手机号码</string>

</resources>
