<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_apply_money_banner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_corner5_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hope_money"
            android:textColor="@color/color_666666"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="end"
            android:inputType="number"
            android:paddingEnd="10dp"
            android:maxLength="6"
            android:paddingStart="10dp"
            android:text="@string/text_5000"
            android:textColor="@color/color_FFFA7868"
            android:textColorHint="@color/color_FFFA7868" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textColor="@color/color_666666"
            android:textSize="14sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_corner5_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_period"
            android:textColor="@color/color_666666"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="end"
            android:inputType="number"
            android:paddingEnd="10dp"
            android:maxLength="3"
            android:paddingStart="10dp"
            android:text="@string/text_30"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_333333" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textColor="@color/color_666666"
            android:textSize="14sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_corner5_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrive_time"
            android:textColor="@color/color_666666"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="end"
            android:maxLength="3"
            android:inputType="number"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/text_12"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_333333" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour"
            android:textColor="@color/color_666666"
            android:textSize="14sp" />


    </LinearLayout>


    <TextView
        android:id="@+id/btn_apply_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_corner5_btn_blue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/apply_borrow_money"
        android:textColor="@color/color_FFFFFF"
        android:textSize="14sp" />


</LinearLayout>
