<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RadioGroup
            android:id="@+id/rg_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_fdfdfd"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_home"
                style="@style/main_text"
                android:drawableTop="@drawable/selector_main_home"
                android:text="@string/home" />

            <RadioButton
                android:id="@+id/rb_loans"
                style="@style/main_text"
                android:drawableTop="@drawable/selector_main_loans"
                android:text="@string/loans" />

            <RadioButton
                android:id="@+id/rb_find"
                style="@style/main_text"
                android:drawableTop="@drawable/selector_main_find"
                android:text="@string/find" />

            <RadioButton
                android:id="@+id/rb_me"
                style="@style/main_text"
                android:drawableTop="@drawable/selector_main_me"
                android:text="@string/me" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>
