<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <EditText
        android:id="@+id/et_old_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_corner5_white"
        android:hint="@string/please_input_old_pw"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/color_333333"
        android:textColorHint="@color/color_999999"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_new_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_corner5_white"
        android:hint="@string/password_tip"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/color_333333"
        android:textColorHint="@color/color_999999"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_new_pw2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_corner5_white"
        android:hint="@string/retry_input_pw"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/color_333333"
        android:textColorHint="@color/color_999999"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/btn_change_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_corner5_btn_blue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/change_password"
        android:textColor="@color/color_FFFFFF"
        android:textSize="14sp" />


    <LinearLayout
        android:id="@+id/ll_last_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pwd" />

        <TextView
            android:id="@+id/find_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/click_with_find"
            android:textColor="@color/color_30cad9" />
    </LinearLayout>


</LinearLayout>