<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_corner5_white"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minEms="5"
            android:text="@string/name_str"
            android:textColor="@color/color_2a2a2a"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/please_et_name"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/color_2a2a2a"
            android:textColorHint="@color/color_999999"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_corner5_white"
        android:gravity="center_vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minEms="5"
            android:text="@string/mobile_str"
            android:textColor="@color/color_2a2a2a"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/please_et_phone"
            android:textColor="@color/color_2a2a2a"
            android:textColorHint="@color/color_999999"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_corner5_white"
        android:gravity="center_vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minEms="5"
            android:text="@string/idcard_str"
            android:textColor="@color/color_2a2a2a"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_idcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/please_et_idcard"
            android:textColor="@color/color_2a2a2a"
            android:textColorHint="@color/color_999999"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>
