<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_corner5_white"
        android:hint="@string/password_tip"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/color_333333"
        android:textColorHint="@color/color_999999"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_pw2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_corner5_white"
        android:hint="@string/retry_input_pw"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/color_333333"
        android:textColorHint="@color/color_999999"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/btn_save_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_corner5_btn_blue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/save_password"
        android:textColor="@color/color_FFFFFF"
        android:textSize="14sp" />


</LinearLayout>